--- a/wp-content/themes/environics/assets/sass/navigation/_menus.scss
+++ b/wp-content/themes/environics/assets/sass/navigation/_menus.scss
@@ -67,11 +67,6 @@
 	text-align: left;
 	margin-right: 1.5rem;
 
-	// &:focus {
-	// 	outline: thin dotted;
-	// 	color: #f2bd37;
-	// }
-
 	.patty, &:before, &:after {
 		background-color: $lightpurple;
 		content: "";
@@ -87,10 +82,6 @@
 
 	&:after {
 		top: 16px;
-	}
-
-	&:hover .patty {
-		right: -1rem;
 	}
 }
 
